entity_macros/tests/ui/derive/ent/field-is-not-cloneable.stderr
error[E0277]: the trait bound `CustomField: Clone` is not satisfied
  --> $DIR/field-is-not-cloneable.rs:21:5
   |
21 |     custom: CustomField,
   |     ^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `CustomField`
   |
   = note: required by `clone`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `clone` found for struct `CustomField` in the current scope
   --> $DIR/field-is-not-cloneable.rs:6:17
    |
4   | struct CustomField;
    | ------------------- method `clone` not found for this
5   |
6   | #[derive(Clone, Ent)]
    |                 ^^^ method not found in `CustomField`
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `clone`, perhaps you need to implement it:
            candidate #1: `Clone`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
